[Payments] Improve some accessibility labels in editors

BUG=729633
TEST=VoiceOver

Review-Url: https://codereview.chromium.org/2931503002
Cr-Commit-Position: refs/heads/master@{#478600}

Former-commit-id: c40f49bfd5d6574449f8fb8bdb774684f5355094